@@ -58,18 +58,14 @@ static const char _dat79Dv[]="\x20\x03\x22\x00\xC1\x00\xC1\xC5\x80\x80\x00\x84\x
 
 static const char _datB[]="\x01\x02\x03\x07\x02\x02\x02\x03\x02\x02\x02";
 
-// Bit 15 set if recolor block, bit 14 set if mixed block, bit 13 set if 80+x valid, bit 
-// Remaining bits are number of sprites expected. If 0, sprite count is not checked
-// Flags:
-// 01 -- recolor
-// 02 -- mixed
-// 04 -- word
-// 08 -- allow 80+x
-static const char _dat5[]="\x04\x01"
+// vv Flags -- 01: recolor, 02: mixed, 04: word, 08: allow 80+x, 80: is flag byte
+//     vv Infocount: NT: N sprite-count options for each of T types follow
+//         vv... Lenght(s): repeat N options for each of T types
+static const char _dat5[]="\x04\x02"
 	"\x13\x30\x70\xF0"			//4
 	"\x11\x30"					//5
 	"\x12\x4A\x5A"				//6
-	"\x31\x4B\x41\x06"			//7..9
+	"\x31\x5D\x41\x06"			//7..9
 "\x85\x11\x00\x01"				//A
 	"\x31\x71\x85\x10"			//B..D
 "\x82\x11\x00"					//E
@@ -157,7 +153,7 @@ static const char _datfeat[]="\x11\x07\x0F"
 //The upper chawmp, which only applies in FE strings:
 //0x:default  Cx:linebreak;long lead
 //Full description in act0.cpp.
-static const char _dat0[]="\x0C\x05\x0F"
+static const char _dat0[]="\x0C\x06\x0F"
 "\x22\xFF\x01\x21\x21\x01\x01\x21\x01\x22\xFF\x22\xFF\x01\x04\xFF\xFF\xFF\x01\x01\x21\x01\x01\x01\x01\x01\x01\x22\x01\x34\x01\x01\x01\x01\x01\x21\x01\x01\x21\x01\x32\x32\x04\x00"
 "\x22\xFF\x01\x21\x21\xFF\x01\x21\x21\x01\x04\xFF\xFF\xFF\x01\x21\x01\x01\x01\x21\x21\x21\x34\x01\x01\x01\x01\x21\x01\x32\x32\x04\x00"
 //                                 08                              10                              18                              20                              28
@@ -171,7 +167,7 @@ static const char _dat0[]="\x0C\x05\x0F"
 	"\x01\x01r\x01x\x80\x81\xC0\x00"
 "\xFF\xFF\xFF\xFF\xFF\xFF\xFF\xFF\x01\x01\x00"
 //                                 08                              10
-"\xFF\xFF\xFF\xFF\xFF\xFF\xFF\xFF\x21\x21\x21\x01\x22\xFE\x01\x04\x00"
+"\xFF\xFF\xFF\xFF\xFF\xFF\xFF\xFF\x21\x21\x21\x01\x22\xFE\x01\x04\x32\x32\x32\x00"
   "\x01\x01r\x34x\x81\x20\xC0\x00"//                   ^^
 "\xFF\xFF\xFF\xFF\xFF\xFF\xFF\xFF\x01\x01\x02\x01\x01\x01\x01\x01\x22\x01\x32\x02\x01\x01\x01\x04\x01\x01\x01\x01\x01\x01\x04\x01\xFE\x00"
   "\x01r\x01\x80\x00"
