@@ -2,6 +2,8 @@ Changelog:
 v3.4.6 to
 - Data file updates:
   - Action 2 variable 12.
+  - Bridge props 10..12.
+  - New sprites for Action 5 type 07.
 
 v3.4.5 to v3.4.6 (r1795)
 - Data file updates:
